# diary

./: .gitignore  README.md  create-lock.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  requirements.txt  setup.sh  Жц
backend/: .dockerignore  .env.example  .env.exmaple  Dockerfile  cookies.txt  create_tables.py  init_db.py  pyproject.toml  requirements.txt  run.py
backend/app/: auth.py  config.py  crud.py  database.py  dependencies.py  main.py  middleware.py  models.py  notification_service.py  schemas.py
backend/app/api/: auth.py
backend/app/routers/: auth.py  color_tags.py  diary.py  notes.py  notifications.py  personality.py  planner.py  sleep.py  sleep_notes.py  study_timer.py
frontend/: '  .dockerignore  Dockerfile  Dockerfile.dev  ecosystem.config.js  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthProvider.tsx  ConfirmDialog.tsx  DatePicker.tsx  DepressionTest.tsx  DreamTypePicker.tsx  EmotionPicker.tsx  EntryInfoModal.tsx  ImageUploader.tsx  Loading.tsx  LoadingScreen.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  MiniTimer.tsx  MoodBoosters.tsx  NotificationsBell.tsx  PersonalityTest.tsx  ProfileModal.tsx  ProtectedRoute.tsx  QuestionsModal.tsx  Sidepanel.tsx  SleepInDiary.tsx  Toast.tsx  WakeMoodPicker.tsx
frontend/hooks/: useColorTags.ts
frontend/lib/: api-url.ts  auth.ts  avatar.ts  axios.ts  colors.ts  config.ts  eventBus.ts
frontend/store/: authStore.ts  sidepanelStore.ts
(+28 files in other folders)
